[gd_scene load_steps=3 format=3 uid="uid://nib5xcfbbk60"]

[ext_resource type="Script" path="res://prog_58b.gd" id="1_mnvr0"]
[ext_resource type="Theme" uid="uid://b0cs0qqc6nrp7" path="res://Big_font.tres" id="2_rfp4o"]

[node name="prog58b" type="Node2D"]
script = ExtResource("1_mnvr0")

[node name="Label" type="Label" parent="."]
offset_left = 82.0
offset_top = 44.0
offset_right = 341.0
offset_bottom = 85.0
text = "Enter A, B, and C:"

[node name="A" type="LineEdit" parent="."]
offset_left = 70.0
offset_top = 80.0
offset_right = 198.0
offset_bottom = 136.0

[node name="B" type="LineEdit" parent="."]
offset_left = 230.0
offset_top = 81.0
offset_right = 358.0
offset_bottom = 137.0

[node name="C" type="LineEdit" parent="."]
offset_left = 381.0
offset_top = 80.0
offset_right = 509.0
offset_bottom = 136.0

[node name="Label2" type="Label" parent="."]
offset_left = 73.0
offset_top = 161.0
offset_right = 409.0
offset_bottom = 230.0
text = "The roots are: "

[node name="Show" type="Button" parent="."]
offset_left = 56.0
offset_top = 211.0
offset_right = 182.0
offset_bottom = 290.0
theme = ExtResource("2_rfp4o")
text = "Show"

[node name="Clear" type="Button" parent="."]
offset_left = 234.0
offset_top = 215.0
offset_right = 360.0
offset_bottom = 294.0
theme = ExtResource("2_rfp4o")
text = "clear"

[node name="Exit" type="Button" parent="."]
offset_left = 386.0
offset_top = 217.0
offset_right = 512.0
offset_bottom = 296.0
theme = ExtResource("2_rfp4o")
text = "Exit"

[connection signal="pressed" from="Show" to="." method="_on_show_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
